# Attyre

./: .assetsignore  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  LICENSE  PRIVACY.md  Privacy-Policy.html  README.md  SECURITY.md  SUPPORT.md  electron-builder.yml  index.html  manifest.json  package-lock.json  package.json  service-worker.js  style.css  vite.config.js  wrangler.jsonc
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-test.yml  changelog-check.yml  deploy-preview.yml  label-sync.yml  mirror-to-gitlab.yml  pr-size.yml  release.yml  security-audit.yml  stale.yml
electron/: main.cjs  preload.cjs
js/: app.js  electron-bridge.js  engine.js  engine.test.js  store.js  store.test.js  tauri-fs.js  updater.js
js/components/: item-card.js
js/pages/: add-item.js  calendar.js  history.js  home.js  item-detail.js  packing.js  privacy.js  saved-outfits.js  settings.js  stats.js  suggest.js  wardrobe.js
scripts/: generate-update-manifest.js  lint-css-classes.sh  tauri-dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
