[package]
name = "attyre"
version = "3.1.0"
description = "Attyre — Smart Wardrobe Manager"
authors = ["AetherAssembly"]
license = "AGPL-3.0"
repository = "https://github.com/AetherAssembly/Attyre"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "attyre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
